--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,6 +1,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 .example {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   background-color: #fff;
   color: #2f2f37;
@@ -20,7 +21,14 @@
 
 .example .background {
   height: 240px;
-  background-image: url("../images/logo.png");
+  background-image: url('../images/logo.png');
   background-size: cover;
   background-position: center;
-}/*# sourceMappingURL=index.css.map */
+} /*# sourceMappingURL=index.css.map */
+body {
+  padding: 50px;
+}
+img {
+  display: block;
+  max-width: 50%;
+}
